// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieCard renders component 1`] = `
<a
  className="relative bg-white rounded-md shadow-lg overflow-hidden h-80 hover:cursor-pointer"
  href="/movie/1"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <img
    alt="Test"
    className="absolute inset-0 w-full h-full hover:scale-105 transition-transform"
    data-nimg="fill"
    decoding="async"
    loading="lazy"
    onError={[Function]}
    onLoad={[Function]}
    sizes="100vw"
    src="/_next/image?url=https%3A%2F%2Fplacehold.co%2F600x400&w=3840&q=75"
    srcSet="/_next/image?url=https%3A%2F%2Fplacehold.co%2F600x400&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fplacehold.co%2F600x400&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fplacehold.co%2F600x400&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fplacehold.co%2F600x400&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fplacehold.co%2F600x400&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fplacehold.co%2F600x400&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fplacehold.co%2F600x400&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fplacehold.co%2F600x400&w=3840&q=75 3840w"
    style={
      {
        "bottom": 0,
        "color": "transparent",
        "height": "100%",
        "left": 0,
        "objectFit": "cover",
        "objectPosition": undefined,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "100%",
      }
    }
  />
  <div
    className="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent"
  >
    <h3
      className="text-lg font-semibold text-white"
    >
      Test
    </h3>
  </div>
  <div
    className="absolute top-4 left-4 bg-white text-black rounded-full flex items-center justify-center w-10 h-10"
  >
    <p
      className="text-sm font-bold"
    >
      5
    </p>
  </div>
</a>
`;

exports[`MovieCard renders component with alt props 1`] = `
<a
  className="relative bg-white rounded-md shadow-lg overflow-hidden h-80 hover:cursor-pointer"
  href="/movie/1"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="w-full h-full bg-gray-800 flex items-center justify-center"
  >
    <p
      className="text-white"
    >
      Image not found
    </p>
  </div>
  <div
    className="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent"
  >
    <h3
      className="text-lg font-semibold text-white"
    >
      Test
    </h3>
  </div>
  <div
    className="absolute top-4 left-4 bg-white text-black rounded-full flex items-center justify-center w-10 h-10"
  >
    <p
      className="text-sm font-bold"
    >
      5
    </p>
  </div>
</a>
`;
